--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -48,6 +48,6 @@
 <div class="pt-2 w-12 md:w-9 lg:w-3 m-auto">
   <a
     class="text-primary"
-    href="/auth/register"
+    routerLink="/auth/register"
   >¿No tienes cuenta? Crea una.</a>
 </div>
