--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -89,7 +89,7 @@
 <div class="m-auto mt-2 w-12 md:w-9 lg:w-3">
   <a
     class="text-primary"
-    href="/auth/login"
+    routerLink="/auth/login"
   >¿Ya tienes cuenta? Inicia sesión.</a>
 
 </div>
