--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -51,3 +51,7 @@
     routerLink="/auth/register"
   >¿No tienes cuenta? Crea una.</a>
 </div>
+
+<div *ngIf="visibleSpinner" class="flex justify-content-center mt-5">
+  <p-progressSpinner class="mx-auto" strokeWidth="6" fill="var(--surface-ground)" aria-label="Loading"></p-progressSpinner>
+</div>
