--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -95,4 +95,7 @@
 </div>
 
 
+<div *ngIf="visibleSpinner" class="flex justify-content-center mt-5">
+  <p-progressSpinner class="mx-auto" strokeWidth="6" fill="var(--surface-ground)" aria-label="Loading"></p-progressSpinner>
+</div>
 
