--- a/src/app/presupuestos/pages/presupuestos/presupuestos.component.html
+++ b/src/app/presupuestos/pages/presupuestos/presupuestos.component.html
@@ -31,4 +31,7 @@
 
 </div>
 
+<!-- <div *ngIf="loading()" class="flex justify-content-center mt-5">
+  <p-progressSpinner class="mx-auto" strokeWidth="6" fill="var(--surface-ground)" aria-label="Loading"></p-progressSpinner>
+</div> -->
 <app-gestor-presupuesto *ngIf="this.user()?.presupuesto !== 0"></app-gestor-presupuesto>
