--- a/src/app/presupuestos/components/gestor-presupuesto/gestor-presupuesto.component.html
+++ b/src/app/presupuestos/components/gestor-presupuesto/gestor-presupuesto.component.html
@@ -26,7 +26,7 @@
 
 <div class="grid mx-8 justify-content-center">
   <div *ngIf="loading()" class="flex block justify-content-center mt-5">
-    <p-progressSpinner class="mx-auto" strokeWidth="6" fill="var(--surface-ground)" aria-label="Loading"></p-progressSpinner>
+    <p-progressSpinner class="mx-auto" strokeWidth="6" aria-label="Loading"></p-progressSpinner>
   </div>
   <h2 *ngIf="gastos().length === 0 && !loading()"
     class="bg-primary-reverse p-5 border-round w-full"
