fix spinner and progress bar

--- a/src/app/presupuestos/components/gestor-presupuesto/gestor-presupuesto.component.html
+++ b/src/app/presupuestos/components/gestor-presupuesto/gestor-presupuesto.component.html
@@ -12,7 +12,11 @@
 
   <div class="m-2">
     <h3 class="text-center">{{porcentajeGastado()}}% Gastado</h3>
-    <p-progressBar color="" [showValue]="false" [value]="porcentajeGastado()"></p-progressBar>
+    <p-progressBar 
+      [color]="(porcentajeGastado() ?? 0) >= 90 ? 'red' : ((porcentajeGastado() ?? 0) >= 70 ? 'yellow' : 'green')" 
+      [showValue]="false" 
+      [value]="porcentajeGastado()"
+      ></p-progressBar>
   </div>
 
 </div>
